Update P2 and Index

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ title: Organic Rails
 
 <div class="main-explain-area jumbotron">
   <p>Hi there. Welcome to Organic Rails. </p>
+  <p>New to this blog (or Ruby on Rails in general)?</p>
   <p>Before you go on, please take a look at <a href="{% post_url 2015-07-19-welcome %}">This Post</a> First</p>
   <p>Finished? Great!</p>
-  <p>Well then, without furhter ado, please enjoy the content. I truly hope that somewhere in this blog you'll learn something that you did not know before.</p>
+  <p>Well then, please enjoy the content. I truly hope that somewhere in this blog you'll learn something that you did not know before.</p>
 </div>
 
 <div class="posts-list">
